welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
	while(!posFinal){
		if(!estDosMur){
			avance();
		}else{
			setPos(getX()+1 ,0)
		}
	}
}



def posF():Boolean ={
	if( getX()!= getMondeLargeur()-1  && getY()!=getMondeHauteur()-1){
		return true
	}else{
		return false
	}
}
